# tds-solver

./: .gitignore  LICENSE  app.py  authentication.py  data_preparations.ipynb  email.json  index.html  ollama_assistance.ipynb  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: hello-world.yml  my_action.yml
chromadb/: chroma.sqlite3
docs/: data_preparations.ipynb
helpers/: __init__.py  authentication.py  zipfiles.py
static/: index.html  styles.css
submissions/: README.md  __init__.py  action_github.py  bbc_weather.py  bounding_box.py  chrome_devtools.py  clean_sales.py  clean_student_marks.py  colab_key.py  compare_files.py  cosine_similarity.py  counting_days.py  create_markdown.py  css_selectors.py  csv_zipfile.py  encode_image.py  excel.py  extract_tables.py  filter_file_attributes.py  function_calling.py  github_push.py  google_sheets.py  hacker_news.py  host_portfolio.py  http_requests.py  image_lightness.py  imdb_movies.py  imdb_scrape.py  jigsaw_image.py  json_cleanup.py  large_json_extract.py  llm_embeddings.py  local_llm.py  log_requests.py  most_similar.py  move_rename.py  newest_github_user.py  npx_prettier.py  parse_sales_data.py  pdf_to_markdown.py  (+16 more)
