[project]
name = "tds-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ollama>=0.4.7",
    "openai>=1.65.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "scipy>=1.15.2",
    "uvicorn>=0.34.0",
    "yt-dlp>=2025.2.19",
]
