[project]
name = "tds-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "fastapi>=0.115.11",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "openai>=1.65.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydf>=12",
    "python-multipart>=0.0.20",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
    "yt-dlp>=2025.2.19",
]
